feat: Improve SEO and metadata
Enhance search engine optimization by updating the page title, adding relevant keywords, and refining the meta description. Also, update external links to point to more authoritative sources for context on migrant experiences.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Análisis SEO: "Sin Nombre", Migración, Otredad e Identidad en el Cine de Fukunaga</title>
+    <title>Análisis: "Sin Nombre" - Migración, Otredad e Identidad</title>
     <meta name="description" content="Explora el profundo análisis de 'Sin Nombre' y su impacto en la narrativa de la migración centroamericana. Descubre el simbolismo, la otredad y la construcción de identidad en esta obra cinematográfica de Cary Joji Fukunaga. Un estudio esencial sobre la realidad migrante y el sueño americano." />
+    <meta name="keywords" content="Sin Nombre, Cary Joji Fukunaga, análisis cinematográfico, migración, identidad migrante, otredad, La Bestia, Mara Salvatrucha, cine social, drama migratorio, frontera México-EEUU, sueño americano, cine latinoamericano" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
